--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -1,3 +1,63 @@
+button {
+    background: none repeat scroll 0 0 #ef4300;
+    border: 1px solid #ff730e;
+    border-radius: 6px;
+    box-shadow: 0 15px 30px 0 rgba(255, 255, 255, 0.25) inset, 0 2px 7px 0 rgba(0, 0, 0, 0.2);
+    color: #fff;
+    cursor: pointer;
+    font-family: "PT Sans",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    height: 44px;
+    margin-top: 25px;
+    padding: 0;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    transition: all 0.2s ease 0s;
+    width: 300px;
+}
+.loginDiv{
+    margin: 15px auto 0;
+    position: relative;
+    text-align: center;
+    width: 305px;
+
+}
+
+.logoDiv {
+    background-image: url("../images/logo.png");
+    background-repeat: no-repeat;
+    float: left;
+    height: 100%;
+    vertical-align: middle;
+    width: 350px;
+    margin-left: 40px;
+}
+
+.rightDiv {
+    float: right;
+    height: 100%;
+    width: 500px;
+    text-align: left;
+}
+
+.login-body{
+    background: url('/EmployeeReferral1/images/loginBack.jpg') no-repeat center center fixed;
+    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+    text-align: center;
+    color: #fff;
+    -webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	height: 100%;
+  	width:100%;
+    
+}
+.page-container {
+	padding-top:20px;
+    margin: 90px auto 0 auto;
+}
+
 .bg {
   background: url('/restrobooking/images/Hotel_new.jpg') no-repeat center center;
   position: fixed;
@@ -9,6 +69,10 @@
    
 }
 
+.page-header{
+	
+    margin: 10px auto 0 auto;
+}
 .login-bg {
   background: url('/EmployeeReferral1/images/reserveTable.png') repeat center center;
   position: fixed;
@@ -99,8 +163,8 @@ background: none repeat scroll 0 0 rgba(206, 42, 46, 0.9) !important;
 
 
 .socialLoginLinks {
-    float: right;
-    padding-top: 135px;
+    float: none;
+    
     width: 320px;
 }
 .btn-social, .btn-social:focus, .btn-social:hover {
