--- a/src/main/webapp/css/template.css
+++ b/src/main/webapp/css/template.css
@@ -4,6 +4,15 @@
     margin: 0;
     padding: 0;
 }
+h1{
+	font-size: 30px;
+    font-weight: 700;
+    text-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
 .defaultText {
     color: gray;
 }
@@ -114,20 +123,12 @@ select {
     width: 1002px;
 }
 .headerDiv {
-    background-color: #D0D0D0;
-    background-image: url("../images/img_header-bg.gif");
+   
     background-repeat: repeat-x;
     height: 85px;
     width: 100%;
 }
-.logoDiv {
-    background-image: url("../images/logo.png");
-    background-repeat: no-repeat;
-    float: left;
-    height: 100%;
-    vertical-align: middle;
-    width: 350px;
-}
+
 .logoDiv a span {
     height: 75px;
     width: 75px;
@@ -145,12 +146,7 @@ select {
     padding-left: 20px;
     top: 30px;
 }
-.rightDiv {
-    background: url("../images/img_header-globe1.gif") no-repeat scroll right top rgba(0, 0, 0, 0);
-    float: right;
-    height: 100%;
-    width: 500px;
-}
+
 .topLinkDiv {
     background-color: #222222;
     clear: both;
@@ -215,6 +211,7 @@ select {
     display: table;
     height: 100%;
     margin: 10px 15px 15px;
+    width:90%;
 }
 .mainDivTeamSite {
     background-color: #fff;
