--- a/src/main/webapp/css/template.css
+++ b/src/main/webapp/css/template.css
@@ -102,7 +102,7 @@ select {
     background-color: #fff;
 }
 .siteDiv {
-    background-color: #4b4747;
+    /* background-color: #4b4747; */
     height: 100%;
     width: 100%;
 }
