--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -20,7 +20,6 @@ button {
     position: relative;
     text-align: center;
     width: 305px;
-
 }
 
 .logoDiv {
@@ -41,7 +40,7 @@ button {
 }
 
 .login-body{
-    background: url('/EmployeeReferral1/images/loginBack.jpg') no-repeat center center fixed;
+    background: url("../images/loginBack.jpg") no-repeat center center fixed;
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     text-align: center;
     color: #fff;
@@ -58,23 +57,13 @@ button {
     margin: 90px auto 0 auto;
 }
 
-.bg {
-  background: url('/restrobooking/images/Hotel_new.jpg') no-repeat center center;
-  position: fixed;
-  width: 100%;
-  height: 100%; /*same height as jumbotron */
-  top:10px;
-  bottom:10px;
-  z-index: -1;
-   
-}
 
 .page-header{
 	
     margin: 10px auto 0 auto;
 }
 .login-bg {
-  background: url('/EmployeeReferral1/images/reserveTable.png') repeat center center;
+  background: url("../images/reserveTable.png") repeat center center;
   position: fixed;
   width: 105%;
   height: 98%; /*same height as jumbotron */
@@ -175,14 +164,14 @@ background: none repeat scroll 0 0 rgba(206, 42, 46, 0.9) !important;
     width: 80%;
 }
 .btn-fb, .btn-fb:focus, .btn-fb:hover {
-    background: url("/EmployeeReferral1/images/socialLoginButtonIcons.png") no-repeat scroll left top #3c5a98;
+    background: url("../images/socialLoginButtonIcons.png") no-repeat scroll left top #3c5a98;
     border: 0 none;
     color: #fff;
     font-size: 16px;
     height: 45px;
 }
 .btn-google, .btn-google:focus, .btn-google:hover {
-    background: url("/EmployeeReferral1/images/socialLoginButtonIcons.png") no-repeat scroll left -70px #dd4d3b;
+    background: url("../images/socialLoginButtonIcons.png") no-repeat scroll left -70px #dd4d3b;
     border: 0 none;
     color: #fff;
     font-size: 16px;
