--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -53,6 +53,25 @@ button {
   	width:100%;
     
 }
+
+.button-submit{
+	color: 0000FF;
+}
+
+.login-middile-body{
+    background: url("../images/loginBack.jpg") no-repeat center center fixed;
+    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+    /* text-align: center; */
+    color: #fff;x
+    -webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	height: 100%;
+  	width:100%;
+    
+}
+
 .page-container {
 	padding-top:20px;
     margin: 90px auto 0 auto;
