--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -65,7 +65,7 @@ button {
     background: url("../images/loginBack.jpg") no-repeat center center fixed;
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     /* text-align: center; */
-    color: #fff;x
+    color: #fff;
     -webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -108,6 +108,14 @@ button {
   color: white;
   text-shadow: #444 0 1px 1px;
   background:transparent;
+}
+
+.gridStyle {
+    border: 1px solid rgb(212,212,212);
+    width: 800px; 
+    height: 300px;
+    margin-left: 40px;
+    color:black;
 }
 
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
@@ -203,4 +211,8 @@ background: none repeat scroll 0 0 rgba(206, 42, 46, 0.9) !important;
 .btn-social.active, .btn-social:active {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
     outline: 0 none;
+}
+
+.menuBarStyle{
+	width: 50%;
 }
