Modifying alignment of pages

--- a/src/main/webapp/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap.css
@@ -2604,6 +2604,7 @@ input[type="search"] {
 }
 .form-group {
   margin-bottom: 15px;
+  margin-left: 50%;
 }
 .radio,
 .checkbox {
@@ -2942,7 +2943,8 @@ select[multiple].form-group-lg .form-control {
 }
 .form-horizontal .form-group {
   margin-right: -15px;
-  margin-left: -15px;
+  margin-left: 17%;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .form-horizontal .control-label {
