--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -22,8 +22,18 @@ button {
     width: 305px;
 }
 
+.heading-class{
+margin-left: 17%;	
+}
+
+.control-group{
+	width: 100%;
+	margin-left: 17%;
+}
+
 .container{
 	width: 600px;
+	margin-left: 40px;
 }
 
 .logoDiv {
@@ -31,9 +41,9 @@ button {
     background-repeat: no-repeat;
     float: left;
     height: 100%;
-    vertical-align: middle;
+    vertical-align: middle; 
     width: 350px;
-    margin-left: 40px;
+    margin-left: 0%;
 }
 
 .rightDiv {
@@ -41,6 +51,8 @@ button {
     height: 100%;
     width: 500px;
     text-align: left;
+    margin-right: -55px;
+    padding-left: 10%;
 }
 
 .login-body{
@@ -112,9 +124,9 @@ button {
 
 .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 800px; 
+    width: 57%; 
     height: 300px;
-    margin-left: 10px;
+    margin-left: 21%;
     color:black;
 }
 
@@ -212,7 +224,13 @@ background: none repeat scroll 0 0 rgba(206, 42, 46, 0.9) !important;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
     outline: 0 none;
 }
+.navbar-header{
+	margin-left: 10px;
+}
 
 .menuBarStyle{
 	width: 50%;
+	display: compact;
+	position: relative; 
+	margin-left: 17%;
 }
