--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -56,7 +56,7 @@ margin-left: 17%;
 }
 
 .login-body{
-    background: url("../images/loginBack.jpg") no-repeat center center fixed;
+    background-color: #909090;
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     text-align: center;
     color: #fff;
@@ -74,7 +74,7 @@ margin-left: 17%;
 }
 
 .login-middile-body{
-    background: url("../images/loginBack.jpg") no-repeat center center fixed;
+    background-color: #909090;
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     /* text-align: center; */
     color: #fff;
