--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -27,7 +27,7 @@ margin-left: 17%;
 }
 
 .control-group{
-	width: 100%;
+	width: 120%;
 	margin-left: 17%;
 }
 
@@ -43,7 +43,8 @@ margin-left: 17%;
     height: 100%;
     vertical-align: middle; 
     width: 350px;
-    margin-left: 0%;
+    margin-left: -12%;
+    
 }
 
 .rightDiv {
@@ -51,12 +52,14 @@ margin-left: 17%;
     height: 100%;
     width: 500px;
     text-align: left;
-    margin-right: -55px;
-    padding-left: 10%;
+    margin-right: -20%;
+    font-size: x-small;
+    padding-top: -50%;
+    /* padding-left: 10%; */
 }
 
 .login-body{
-    background-color: #909090;
+    background-color: #fff;
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     text-align: center;
     color: #fff;
@@ -66,6 +69,8 @@ margin-left: 17%;
   	background-size: cover;
   	height: 100%;
   	width:100%;
+  	overflow-x: hidden;
+    overflow-y: scroll;
     
 }
 
@@ -74,7 +79,7 @@ margin-left: 17%;
 }
 
 .login-middile-body{
-    background-color: #909090;
+    background-color: #fff;
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     /* text-align: center; */
     color: #fff;
@@ -84,6 +89,8 @@ margin-left: 17%;
   	background-size: cover;
   	height: 100%;
   	width:100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
     
 }
 
@@ -229,14 +236,26 @@ background: none repeat scroll 0 0 rgba(206, 42, 46, 0.9) !important;
 }
 
 .menuBarStyle{
-	width: 50%;
+	width: 79.85%;
 	display: compact;
 	position: relative; 
-	margin-left: 17%;
+	margin-left: 2.65%;
 }
 
 .divider{
 	width:7px;
     height:auto;
     display:inline-block;
+}
+
+.field-control{
+	width:545px;
+	border: 0px solid black;
+	
+}
+.form-container{
+	border: 1px solid black;
+	margin-left: 30px;
+	margin-right: 200px;
+	background-color: #f8f8f8;
 }
