--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -1,9 +1,9 @@
 button {
-    background: none repeat scroll 0 0 #ef4300;
-    border: 1px solid #ff730e;
+    background: none repeat scroll 0 0 #c0c0c0;
+    border: 1px solid #c0c0c0;
     border-radius: 6px;
     box-shadow: 0 15px 30px 0 rgba(255, 255, 255, 0.25) inset, 0 2px 7px 0 rgba(0, 0, 0, 0.2);
-    color: #fff;
+    color: whitesmoke;
     cursor: pointer;
     font-family: "PT Sans",Helvetica,Arial,sans-serif;
     font-size: 14px;
@@ -51,7 +51,7 @@ margin-left: 17%;
     float: right;
     height: 100%;
     width: 500px;
-    text-align: left;
+    text-align: center;
     margin-right: -20%;
     font-size: x-small;
     padding-top: -50%;
@@ -62,7 +62,7 @@ margin-left: 17%;
     background-color: #fff;
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     text-align: center;
-    color: #fff;
+    color: #000;
     -webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
