Changes in CSS - createPosition

--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -47,3 +47,10 @@ textarea
 	font-weight: bold;
 	font-size: 11pt;
 }
+
+.form-container{
+	position:relative;
+	width:660px;
+	border: 1px solid #d6d6d6;
+	background-color: #F0F0F0;
+}
