CSS Changes and merge AngularJS functionality - createPosition

--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -10,13 +10,12 @@ body
 
 
 .field-control{
-	width:545px;
-	border: 0px solid black;
+	width:380px;
 	
 }
 
 .form-control{
-	margin-left: 16%;
+	/* margin-left: 16%; */
 	width:380;
 	height:32;
 	border-radius: 7px;
@@ -29,7 +28,7 @@ body
 
 textarea
 {
-	margin-left: 16%;
+	/* margin-left: 16%; */
 	width:380;
 	border-radius: 7px;
 	border: 1px solid gray;
@@ -46,11 +45,13 @@ textarea
 .lbl{
 	font-weight: bold;
 	font-size: 11pt;
+	margin-left: -50%;
 }
 
 .form-container{
 	position:relative;
-	width:660px;
+	width:700px;
 	border: 1px solid #d6d6d6;
 	background-color: #F0F0F0;
+	border-radius: 12px;
 }
