--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -61,8 +61,18 @@ textarea
 }
 
 .gridStyle {
-	margin-left:-3%;
+	
     border: 1px solid rgb(212,212,212);
-    width: 455px; 
-    height: 300px;
+    width: 570px; 
+    height: 250px;
+}
+
+#designations, #name{
+	color: black;
+	margin-left:-50%;
+}
+
+#searchBtn{
+	margin-left:-20%;
+	margin-bottom:25%;
 }
