--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -64,16 +64,16 @@ textarea
 .gridStyle {
 	
     border: 1px solid rgb(212,212,212);
-    width: 885px;
-    height: 250px;
+    width: 870px;
+    height: 318px
 }
 
 #designations, #name{
 	color: black;
 	position:absolute;
-	left:57px;
+	left:64px;
 	top:72px;
-	width:180px;
+	width:153px;
 	height:30px;
 }
 
@@ -87,10 +87,11 @@ textarea
 #searchBtn{
 	position:absolute;
 	top:34px;
-	left:184px;
-	width:60px;
-	height:30px;
-
+	left:190px;
+	width:90px;
+	border-top-left-radius:2px;
+	border-bottom-left-radius:2px;
+	height:30.5px;
 }
 
 #searcCanhBtn{
@@ -115,6 +116,10 @@ textarea
 
 #rsBtn{
 	position:absolute;
-	top:35px;
-	left:259px;
+	top:34px;
+	left:300px;
+}
+
+.positionMg{
+	padding-bottom: 100px;
 }
