--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -88,11 +88,24 @@ textarea
 #searchBtn{
 	position:absolute;
 	top:34px;
-	left:165px;
+	left:190px;
 	width:90px;
-	border-top-left-radius:2px;
-	border-bottom-left-radius:2px;
+	/* border-top-left-radius:2px;
+	border-bottom-left-radius:2p */x;
 	height:30.5px;
+}
+
+
+#rsBtn{
+	position:absolute;
+	top:34px;
+	left:296px;
+}
+
+#approveBtn{
+	position:absolute;
+	top:34px;
+	left:400px;
 }
 
 #searcCanhBtn{
@@ -108,19 +121,6 @@ textarea
 	border: 1px solid #d6d6d6;
 	background-color: #F0F0F0;
 	border-radius: 12px;
-}
-
-
-#rsBtn{
-	position:absolute;
-	top:34px;
-	left:273px;
-}
-
-#approveBtn{
-	position:absolute;
-	top:34px;
-	left:377px;
 }
 
 .positionMg{
@@ -152,4 +152,12 @@ textarea
 	position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+.ft{
+	position:relative;
+	bottom:0px;
+	background:black;
+	width:100%;
+	height:10%;
 }
