--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -58,7 +58,8 @@ textarea
 	position:relative;
 	width:1050px;
 	border: 1px solid #d6d6d6;
-	background-color: #F0F0F0;
+	/* background-color: #F0F0F0; */
+	background-color: #EBFAEB;
 	border-radius: 12px;
 }
 
