Add ngRoute ngView to candidate/profile and update searchProfile page

--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -70,7 +70,7 @@ textarea
     height: 318px
 }
 
-#designations, #name{
+#designations, #candidateName{
 	color: black;
 	position:absolute;
 	left:30px;
