Add createProfile page and update CSS

--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -137,7 +137,7 @@ textarea
 	font-weight:bold;
 }
 
-#designation, #jobcode, #exp, #secondarySkills, #noOfPositions, #location, #client, #experience{
+#designation, #jobcode, #exp, #secondarySkills, #noOfPositions, #location, #client, #experience, #cname, #qualification, #selectbasic, #Skills, #mobileNo, #presentLocation, #pancardNo, #passportNo, #emailId{
 	width:250px;
 }
 .tableTd{
