--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -136,9 +136,10 @@ textarea
 	font-weight:bold;
 }
 
-#designation, #jobcode, #exp, #secondarySkills, #noOfPositions, #location, #client, #experience, #cname, #qualification, #selectbasic, #Skills, #mobileNo, #presentLocation, #pancardNo, #passportNo, #emailId{
+#designation, #jobcode, #exp, #secondarySkills, #noOfPositions, #location, #client, #experience, #cname, #qualification, #selectbasic, #Skills, #mobileNo, #presentLocation, #pancardNo, #passportNo, #emailId, #stream, #altmobileNo, #currentEmployee, #plocation, #currentEmployer{
 	width:250px;
 }
+
 .tableTd{
 	padding-right: 20px;
 }
@@ -163,4 +164,25 @@ textarea
 
 .ngRowCountPicker{
 	display: none;
+}
+
+.custom-file-input {
+  color: transparent;
+}
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: 'Select File';
+  color: white;
+  background: -webkit-linear-gradient(top, #337ab7, #337ab7);
+  border: 1px solid #999;
+  border-radius: 9px;
+  padding: 5px 5px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 10pt;
+}
+.custom-file-input:hover::before {
+  border-color: black;
 }
