--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -186,3 +186,45 @@ textarea
 .custom-file-input:hover::before {
   border-color: black;
 }
+.headerclass{
+	position:absolute;
+	top:150px;
+	left:400px;
+}
+.searchprofile-container{
+	position:absolute;
+	top:220px;
+	left:115px;
+	width:1050px;
+	border: 1px solid #d6d6d6;
+	background-color: #EBFAEB;
+	border-radius: 12px;
+}
+.searchposition-container{
+	position:absolute;
+	top:220px;
+	left:115px;
+	width:1050px;
+	border: 1px solid #d6d6d6;
+	background-color: #EBFAEB;
+	border-radius: 12px;
+}
+.createprofile-container{
+	position:absolute;
+	top:220px;
+	left:115px;
+	height: 580px;
+	width:1050px;
+	border: 1px solid #d6d6d6;
+	background-color: #EBFAEB;
+	border-radius: 12px;
+}
+.createposition-container{
+	position:absolute;
+	top:250px;
+	left:115px;
+	width:1050px;
+	border: 1px solid #d6d6d6;
+	background-color: #EBFAEB;
+	border-radius: 12px;
+}
