--- a/src/main/webapp/views/createProfile.html
+++ b/src/main/webapp/views/createProfile.html
@@ -286,10 +286,10 @@
 				<td id="tdid" class="tableTd">
 				</td>
 				<td id="tdid" class="tableTd">
-				<a href="" class="btn btn-success" ng-click="submit()" ng-disabled="disableProBtn">
+				<a href="" class="btn btn-primary" ng-click="submit()" ng-disabled="disableProBtn">
          		 <span class="glyphicon glyphicon-ok-circle"></span> Register
        			 </a>
-				<a href="#pro" class="btn btn-success">
+				<a ui-sref="searchProfile" class="btn btn-primary">
          		 <span class="glyphicon glyphicon-remove"></span> Cancel
        			 </a>
 				</td>
@@ -303,6 +303,7 @@
             	</form>
             </form>
             </div>
+            
           </div>
          </div>
         <!-- /span12 --> 
