--- a/src/main/webapp/views/editProfile.html
+++ b/src/main/webapp/views/editProfile.html
@@ -3,7 +3,7 @@
 </h1>
 <br>
 <div class="widget widget-table action-table">
-	<div class="form-container">
+	<div class="editprofile-container">
 		<br>
 
 			<form id="integerForm" role="form" class="form-horizontal" action="#" name="CreateCandidate" onvalidate>
@@ -270,12 +270,12 @@
 						<td id="tdid" class="tableTd">
 						<td id="tdid" class="tableTd">
 							<div class="control-group">
-								<a href="" class="btn btn-success" ng-click="editProfile()">
-									<span class="glyphicon glyphicon-edit"></span> Edit
-								</a> <a href="" class="btn btn-success"
+								<a href="" class="btn btn-primary" ng-click="editProfile()">
+									<span class="glyphicon glyphicon-edit"></span> Schedule
+								</a> <a href="" class="btn btn-primary"
 									ng-click="updateProfileDetails()"> <span
 									class="glyphicon glyphicon-ok"></span> Update
-								</a> <a href="#pro" class="btn btn-success"> <span
+								</a> <a ui-sref="searchProfile" class="btn btn-primary"> <span
 									class="glyphicon glyphicon-remove"></span> Cancel
 								</a>
 							</div>
