--- a/src/main/webapp/views/searchProfile.html
+++ b/src/main/webapp/views/searchProfile.html
@@ -25,7 +25,7 @@
    
 </head>
 <body>
-<h2 class="headerclass"><b>Profile Management - Search</b></h2>
+<h2 class="headerclass-searchProfile"><b>Profile Management - Search</b></h2>
 <div style="width:1050px;" class="alert alert-danger" role="alert" ng-hide="errorHide"><p style="font-size:3ex;"><b>{{errorMsg}}</b></p></div>
             <div class="searchprofile-container"><br>
            <form action="#" name="searchProfile" onvalidate>
