--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -188,9 +188,8 @@ textarea
 }
 
 .searchprofile-container{
-	position:absolute;
-	top:220px;
-	left:240px;
+	position:relative;
+	top:-40px;
 	width:1050px;
 	border: 1px solid #d6d6d6;
 	background-color: #E0EEEE;
@@ -206,9 +205,7 @@ textarea
 	border-radius: 12px;
 }
 .createprofile-container{
-	position:absolute;
-	top:220px;
-	left:240px;
+	position:relative;
 	height: 580px;
 	width:1050px;
 	border: 1px solid #d6d6d6;
@@ -237,4 +234,9 @@ textarea
 .headerclass{
 	position:relative;
 	top:-20px;
+}
+
+.headerclass-searchProfile{
+	position:relative;
+	top:-40px;
 }
