--- a/src/main/webapp/views/editPosition.html
+++ b/src/main/webapp/views/editPosition.html
@@ -141,13 +141,13 @@
 	              	<td></td>
 	              	<td id="tdid" class="tableTd">
 	              		<div class="control-group">
-	              			<a href="" class="btn btn-success" ng-click="editPosition()">
+	              			<a href="" class="btn btn-primary" ng-click="editPosition()">
 	         		 			<span class="glyphicon glyphicon-edit"></span> Edit
 	       			 		</a>
-	       			 		<a href="" class="btn btn-success" ng-click="updatePositionDetails()">
+	       			 		<a href="" class="btn btn-primary" ng-click="updatePositionDetails()">
 	         		 			<span class="glyphicon glyphicon-ok"></span> Update
 	       			 		</a>
-							<a href="#pos" class="btn btn-success">
+							<a href="#searchPosition" class="btn btn-primary">
 	         		 			<span class="glyphicon glyphicon-remove"></span> Cancel
 	       			 		</a>
 						</div>
