--- a/src/main/webapp/views/createPosition.html
+++ b/src/main/webapp/views/createPosition.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script src="lib/angular/js/angular.min.js"></script>
-
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="js/position/createPosition.js"></script>
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
@@ -156,10 +155,10 @@
 				<tr>
 				<td></td>
 				<td id="tdid" class="tableTd">
-				<a href="" class="btn btn-success" ng-click="submit()" ng-disabled="disableRegister">
+				<a href="" class="btn btn-primary" ng-click="submit()" ng-disabled="disableRegister">
          		 <span class="glyphicon glyphicon-ok-circle"></span> Register
        			 </a>
-				<a href="#pos" class="btn btn-success">
+				<a ui-sref="searchPosition" class="btn btn-primary">
          		 <span class="glyphicon glyphicon-remove"></span> Cancel
        			 </a>
 				</td>
