--- a/src/main/webapp/views/createProfile.html
+++ b/src/main/webapp/views/createProfile.html
@@ -7,6 +7,7 @@
 <script src="lib/angular/js/angular.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
+<script src="lib/bootstrap/js/ng-tags-input.min.js"></script>
 <link href="lib/angular/css/angular-block-ui.min.css" rel="stylesheet">
 <script src="js/masks.js"></script>
 <script src="lib/angular/js/angular-file-upload-shim.min.js"></script>
@@ -15,6 +16,7 @@
 <script src="js/profile/createProfile.js"></script>
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
 <link href="static/css/home.css" rel="stylesheet">
 <link href="lib/bootstrap/font/google_font.css" rel="stylesheet">
 <link href="lib/bootstrap/font/font-awesome.min.css" rel="stylesheet">
@@ -229,9 +231,8 @@
 							<label class="lbl" for="Skills">Skills*:</label>
 				</td>
 				<td id="tdid" class="tableTd">
-				<input type="text" ng-change="toggleProDisable()" ng-pattern="/^[a-zA-Z _]*$/"
-								name="Skills" class="form-control" id="Skills"
-								ng-model="candidate.skills" placeholder="Enter Skills." required>
+				<tags-input ng-model="position.primarySkills"  class="field-control" placeholder="Enter Skills"> <auto-complete id="sk"
+							source="loadTags($query)" class="field-control"></auto-complete> </tags-input>
 							</div>
 				</td>
 				</tr>
