Write jobcode generation function in Service instead of client side

--- a/src/main/webapp/views/createProfile.html
+++ b/src/main/webapp/views/createProfile.html
@@ -128,7 +128,7 @@
 							<label class="lbl" for="plocation">Preferred Location:</label>
 				</td>
 				<td id="tdid" class="tableTd">
-				<select name="plocation" ng-change="jobCodeSelect()" placeholder="Select Location"
+				<select name="plocation" ng-change="jobCodeSl()" placeholder="Select Location"
 									ng-model="selectedpLocation" ng-options = "o as o for o in plocations" class="form-control input-sm" id="plocation" required style="color: black">
 								</select>
 				</td>
