--- a/src/main/webapp/views/createPosition.html
+++ b/src/main/webapp/views/createPosition.html
@@ -137,7 +137,7 @@
 								<label class="lbl" for="name">Interview Rounds</label>
 				</td>
 				<td id="tdid" class="tableTd">
-				<tags-input ng-model="position.InterviewRounds" ng-change="changeEvent()" class="field-control" placeholder="Enter InterviewRounds"> <auto-complete id="ir"
+				<tags-input ng-model="position.interviewRounds" ng-change="changeEvent()" class="field-control" placeholder="Enter InterviewRounds"> <auto-complete id="ir"
 							source="loadRounds($query)" class="field-control"></auto-complete> </tags-input>
 				</td>
 				</tr>
