--- a/src/main/webapp/views/viewProfile.html
+++ b/src/main/webapp/views/viewProfile.html
@@ -19,7 +19,7 @@
 
 						<td class="tableTd">
 							<div>
-							  <a href="#" editable-text="candidate.candidateName" onbeforesave="updateUser($data)">{{ candidate.candidateName || "empty" }}</a>
+							  <a href="#" editable-text="candidate.candidateName" onbeforesave="validateName($data)">{{ candidate.candidateName || "empty" }}</a>
 							</div>
 							<!-- <edit-in-place value="contact.name"></edit-in-place>{{candidate.candidateName}} -->
 						</td>
@@ -77,7 +77,7 @@
 						</td>
 						<td id="tdid" class="tableTd">
 							<div>
-							  <a href="#" editable-text="candidate.mobileNo">{{ candidate.mobileNo || "empty" }}</a>
+							  <a href="#" editable-text="candidate.mobileNo" onbeforesave="validatePhNo($data)">{{ candidate.mobileNo || "empty" }}</a>
 							</div>
 						</td>
 						<td id="tdid" class="tableTd">
@@ -179,7 +179,7 @@
 						<td id="tdid" class="tableTd">
 						<td id="tdid" class="tableTd">
 							<div class="control-group">
-								<a ui-sref="editProfile" class="btn btn-primary">
+								<a ng-click="updateProfileDetails()" class="btn btn-primary">
 									<span class="glyphicon glyphicon-ok"></span> Update
 								</a> 
 								<a ui-sref="searchProfile" class="btn btn-primary"> <span
